--- a/nextBGP.html
+++ b/nextBGP.html
@@ -119,7 +119,8 @@ document.getElementById("resultado").innerHTML =
 	"neighbor " + remoteAsSENTIJ2 + " remote-as 65002" + "<br>" +
     "neighbor "+ remoteAsSENTIJ2 + " weight 100" + "<br>" +
     "neighbor "+ remoteAsSENTIJ2 + " prefix-list DEFAULT out" + "<br>" +
-    "ip prefix-list DEFAULT seq 5 permit " + network +
+    "ip prefix-list DEFAULT seq 5 permit " + network + "<br>" +
+    "wr" +
     "</div>";
       }
     </script>
