--- a/nextBGP.html
+++ b/nextBGP.html
@@ -102,6 +102,9 @@ button {
         // Exibir os valores das variáveis em algum lugar na página
 document.getElementById("resultado").innerHTML =
 	'<div class="shell-body">' +
+	"admin" + "<br>" +
+	"enable" + "<br>" +
+	"admin" + "<br>" +
 	"configure terminal" + "<br>" +
 	"hostname " + hostname + "<br>" +
 	"router bgp  " + localAs + "<br>" +
