--- a/nextBGP.html
+++ b/nextBGP.html
@@ -102,6 +102,8 @@ button {
         // Exibir os valores das variáveis em algum lugar na página
 document.getElementById("resultado").innerHTML =
 	'<div class="shell-body">' +
+	"enable-bgp" + "<br>" +
+	"configure-bgp" + "<br>" +
 	"admin" + "<br>" +
 	"enable" + "<br>" +
 	"admin" + "<br>" +
