--- a/nextBGP.html
+++ b/nextBGP.html
@@ -58,25 +58,25 @@ button {
       </div>
       
 	  <label for="hostname">Sigla da Unidade:</label>
-      <input type="text" id="hostname" name="hostname"><br>
+      <input placeholder="Ex: SENVAL"  type="text" id="hostname" name="hostname"><br>
 	
       <label for="routerId">IP router-id:</label>
-      <input type="text" id="routerId" name="routerId"><br>
+      <input placeholder="Ex: 172.22.32.2" type="text" id="routerId" name="routerId"><br>
 
       <label for="network">Rede Local:</label>
-      <input type="text" id="network" name="network"><br>
+      <input placeholder="Ex: 172.22.32.0/20" type="text" id="network" name="network"><br>
 	  
 	  <label for="remoteAsSede1">IP da tun SEDE - Maior Prioridade:</label>
-      <input type="text" id="remoteAsSede1" name="remoteAsSede1"><br>
+      <input placeholder="Ex: 192.168.200.x" type="text" id="remoteAsSede1" name="remoteAsSede1"><br>
 
 	  <label for="remoteAsSede2">IP da tun SEDE - Menor Prioridade:</label>
-      <input type="text" id="remoteAsSede2" name="remoteAsSede2"><br>
+      <input placeholder="Ex: 192.168.201.x" type="text" id="remoteAsSede2" name="remoteAsSede2"><br>
 	  
 	  <label for="remoteAsSENTIJ1">IP da tun SENTIJ - Maior Prioridade:</label>
-      <input type="text" id="remoteAsSENTIJ1" name="remoteAsSENTIJ1"><br>
+      <input placeholder="Ex: 192.168.200.x" type="text" id="remoteAsSENTIJ1" name="remoteAsSENTIJ1"><br>
 
 	  <label for="remoteAsSENTIJ2">IP da tun SENTIJ - Menor Prioridade:</label>
-      <input type="text" id="remoteAsSENTIJ2" name="remoteAsSENTIJ2"><br>
+      <input placeholder="Ex: 192.168.201.x" type="text" id="remoteAsSENTIJ2" name="remoteAsSENTIJ2"><br>
 
       <button type="button" onclick="mostrarValores()">Enviar</button>
     </form>
