--- a/nextBGP.html
+++ b/nextBGP.html
@@ -58,7 +58,7 @@ button {
       </div>
       
 	  <label for="hostname">Sigla da Unidade:</label>
-      <input placeholder="Ex: SENVAL"  type="text" id="hostname" name="hostname"><br>
+      <input placeholder="SENVAL" class="block w-full h-12 pl-2 text-gray-700 bg-transparent border-gray-800 rounded-md w-100" type="text" id="hostname" name="hostname"><br>
 	
       <label for="routerId">IP router-id:</label>
       <input placeholder="Ex: 172.22.32.2" type="text" id="routerId" name="routerId"><br>
