--- a/nextBGP.html
+++ b/nextBGP.html
@@ -43,7 +43,8 @@ button {
 /* Estilo para a área de resultados */
 .shell-body {
   font-family: Consolas, Menlo, monospace;
-  background-color: #333;
+  /*background-color: #333;*/
+  background-color: #1890ff;
   color: white;
   border: 1px solid #ccc;
   padding: 10px;
