--- a/nextBGP.html
+++ b/nextBGP.html
@@ -32,7 +32,8 @@ input[type="text"] {
 
 button {
   padding: 10px;
-  background-color: #008CBA;
+  /*background-color: #008CBA; */
+  background-color: #1890FF;
   color: white;
   border: none;
   border-radius: 5px;
@@ -43,8 +44,7 @@ button {
 /* Estilo para a área de resultados */
 .shell-body {
   font-family: Consolas, Menlo, monospace;
-  /*background-color: #333;*/
-  background-color: #1890ff;
+  background-color: #333;
   color: white;
   border: 1px solid #ccc;
   padding: 10px;
