--- a/nextBGP.html
+++ b/nextBGP.html
@@ -33,7 +33,7 @@ input[type="text"] {
 button {
   padding: 10px;
   /*background-color: #008CBA; */
-  background-color: #1890FF;
+  background-color: ##428BCA;
   color: white;
   border: none;
   border-radius: 5px;
