--- a/nextBGP.html
+++ b/nextBGP.html
@@ -101,7 +101,7 @@ button {
 
         // Exibir os valores das variáveis no final da página
 document.getElementById("resultado").innerHTML =
-	'<div class="shell-body">' +
+	'<div class="shell-body" style="padding-top:50px;padding-bottom:20px">' + "<br>" +
 	"enable-bgp" + "<br>" +
 	"configure-bgp" + "<br>" +
 	"admin" + "<br>" +
