--- a/nextBGP.html
+++ b/nextBGP.html
@@ -32,8 +32,7 @@ input[type="text"] {
 
 button {
   padding: 10px;
-  /*background-color: #008CBA; */
-  background-color: ##428BCA;
+  background-color: #008CBA;
   color: white;
   border: none;
   border-radius: 5px;
