--- a/nextBGP.html
+++ b/nextBGP.html
@@ -84,7 +84,7 @@ button {
       	<button type="button" onclick="mostrarValores()">Enviar</button>
     </form>
 
-    <div id="resultado"></div>
+    <div id="resultado" style="text-align:center;padding-top:50px; padding-bottom:50px" ></div>
 
 
     <script>
@@ -100,7 +100,7 @@ button {
 
         // Exibir os valores das variáveis no final da página
 document.getElementById("resultado").innerHTML =
-	'<div class="shell-body" style="padding-top:50px;padding-bottom:20px">' + "<br>" +
+	'<div class="shell-body">' + "<br>" +
 	"enable-bgp" + "<br>" +
 	"configure-bgp" + "<br>" +
 	"admin" + "<br>" +
