--- a/nextBGP.html
+++ b/nextBGP.html
@@ -100,7 +100,7 @@ button {
 
         // Exibir os valores das variáveis no final da página
 document.getElementById("resultado").innerHTML =
-	'<div class="shell-body">' + "<br>" +
+	'<div class="shell-body">' +
 	"enable-bgp" + "<br>" +
 	"configure-bgp" + "<br>" +
 	"admin" + "<br>" +
