--- a/nextBGP.html
+++ b/nextBGP.html
@@ -84,7 +84,7 @@ button {
       	<button type="button" onclick="mostrarValores()">Enviar</button>
     </form>
 
-    <div id="resultado" style="text-align:center;padding-top:50px; padding-bottom:50px" ></div>
+    <div id="resultado" style="padding-top:50px; padding-bottom:50px" ></div>
 
 
     <script>
