--- a/nextBGP.html
+++ b/nextBGP.html
@@ -81,7 +81,7 @@ button {
 	<label for="remoteAsSENTIJ2">IP da tun SENTIJ - Menor Prioridade:</label>
 	<input placeholder="192.168.201.x" type="text" id="remoteAsSENTIJ2" name="remoteAsSENTIJ2"><br>
 
-      	<button type="button" onclick="mostrarValores()">Enviar</button>
+      	<button type="button" onclick="mostrarValores()">Gerar Configuração</button>
     </form>
 
     <div id="resultado" style="padding-top:50px; padding-bottom:50px" ></div>
