--- a/nextBGP.html
+++ b/nextBGP.html
@@ -62,12 +62,12 @@ button {
 	</div>
 	    
 	<label for="hostname">Sigla da Unidade:</label>
-        <input placeholder="SENVAL" type="text" class="block w-full h-12 pl-2 text-gray-700 bg-transparent border-gray-800 rounded-md w-100"  id="hostname" name="hostname">
+        <input placeholder="Sigla da unidade" type="text" class="block w-full h-12 pl-2 text-gray-700 bg-transparent border-gray-800 rounded-md w-100"  id="hostname" name="hostname">
       	<label for="routerId">IP router-id:</label>
-      	<input class="form-control formclear input-sm" placeholder="172.22.32.1" type="text" id="routerId" name="routerId">
+      	<input class="form-control formclear input-sm" placeholder="172.X.X.1" type="text" id="routerId" name="routerId">
 
       	<label for="network">Rede Local:</label>
-      	<input placeholder="172.22.32.0/20" type="text" id="network" name="network">
+      	<input placeholder="172.X.X.0/20" type="text" id="network" name="network">
 	  
 	<label for="remoteAsSede1">IP da tun SEDE - Maior Prioridade:</label>
       	<input placeholder="192.168.200.x" type="text" id="remoteAsSede1" name="remoteAsSede1">
