--- a/apiGSM.html
+++ b/apiGSM.html
@@ -160,3 +160,7 @@ button {
   output.textContent = `Erro na autenticação: ${error.message}`;
   document.body.appendChild(output);
 });
+  </script>
+
+</body>
+</html>
